--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           </div>
           <div class="mock-screen" id="mockScreen">
             <div style="text-align:center">
-              <div style="font-size:18px;color:var(--accent-2);font-weight:900">Kab. Kabandungan</div>
+              <div style="font-size:18px;color:var(--accent-2);font-weight:900">build for promblem solving</div>
               <div style="color:var(--muted);margin-top:6px">Website Profil • UMKM • Agenda • Dashboard</div>
             </div>
           </div>
